--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ image = "0.24.2"
 imageproc = "0.23.0"
 log = "0.4.17"
 loggerv = "0.7.2"
+rand = "0.8.5"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 strfmt = "0.1.6"
 structopt = "0.3.26"
+thousands = "0.2.0"
 
