--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,18 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.57"
 hhmmss = "0.1.0"
+ffmpeg-cli = "0.1.0"
+futures = "0.3.21"
 image = "0.24.2"
 imageproc = "0.23.0"
 log = "0.4.17"
 loggerv = "0.7.2"
+mp4 = "0.11.0"
 rand = "0.8.5"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 strfmt = "0.1.6"
 structopt = "0.3.26"
+tokio = "1.19.1"
 thousands = "0.2.0"
 
